# difysandbox-chat-app

./: README.md  docker-compose.yaml  hello.py  pyproject.toml
app/: Dockerfile  app.py  llm.py  requirements.txt
sandbox/: Dockerfile  requirements.txt
