[project]
name = "dify-sandbox-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "icecream>=2.1.3",
    "langchain-community>=0.3.8",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.10",
    "langgraph>=0.2.53",
    "streamlit>=1.40.2",
]

[tool.ruff]
ignore = ["F401"]
